# drag

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  flake.nix  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.changeset/: README.md  bounded-list-pagination.md  calm-clis-retry.md  complete-cli-contract.md  config.json  deterministic-unattended-policy.md  distribution-foundation.md  durable-run-coordination.md  end-of-day-companion.md  final-companion-safety-review.md  generate-agent-skills.md  idempotent-worklog-execution.md  interactive-list-report.md  narrow-list-fields.md  navigate-list-report.md  open-focused-jira.md  operator-recovery-reports.md  quiet-clocks-report.md  reconcile-tempo-days-through-drag.md  remote-content-boundaries.md  remove-issue-aliases.md  remove-shell-completions.md  replay-workdays.md  safe-claude-lifecycle-hooks.md  safe-companion-schedulers.md  safe-unattended-setup.md  schema-constrained-proposal-adapter.md  schema-driven-tempo-api.md  schema-introspection.md  shared-list-report.md  show-list-worklog-attributes.md  staged-autonomy-rollout.md  stream-list-ndjson.md  structured-alias-mutations.md  structured-batch-delete.md  tempo-bare-help.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  changesets.yml  ci.yml  generate-skills.yml  homebrew.yml  release.yml
crates/drag/: Cargo.toml
crates/drag-cli/: AGENTS.md  Cargo.toml
crates/drag-cli/src/: alias.rs  api.rs  app.rs  app_tests.rs  browser.rs  cli.rs  config.rs  delete.rs  doctor.rs  error.rs  generate_skills.rs  list.rs  list_tui.rs  log.rs  main.rs  onboarding.rs  output.rs  recipe_registry.rs  resolve.rs  schema.rs  setup.rs  setup_tui.rs  tempo_openapi.rs  terminal.rs  transport.rs  tui_theme.rs  update.rs
crates/drag-cli/src/app_tests/: mod.rs  support.rs
crates/drag-cli/src/app_tests/support/: doctor.rs  list.rs  setup.rs  terminal.rs
crates/drag-cli/src/onboarding/: tui.rs
crates/drag-cli/tests/: cli.rs
crates/drag-companion/: Cargo.toml
crates/drag-companion/src/: cli_contract.rs  collectors.rs  contract.rs  drag_gateway.rs  errors.rs  evidence_bundles.rs  execution.rs  main.rs  operator_retention.rs  persistence_journal.rs  provider_proposals.rs  replay.rs  rollout.rs  run_coordination.rs  scheduler.rs
crates/drag-companion/tests/: cli_contract.rs
crates/drag-companion/tests/fixtures/replay/representative/: recorded-day-00.json  recorded-day-01.json  recorded-day-02.json  recorded-day-03.json  recorded-day-04.json  recorded-day-05.json  recorded-day-06.json  recorded-day-07.json  recorded-day-08.json  recorded-day-09.json  recorded-day-10.json  recorded-day-11.json  recorded-day-12.json  recorded-day-13.json  recorded-day-14.json  recorded-day-15.json  recorded-day-16.json  recorded-day-17.json  recorded-day-18.json  recorded-day-19.json  recorded-day-20.json  recorded-day-21.json  recorded-day-22.json  recorded-day-23.json  recorded-day-24.json  recorded-day-25.json  recorded-day-26.json  recorded-day-27.json  recorded-day-28.json  recorded-day-29.json
crates/drag/src/: field_selection.rs  lib.rs  list_policy.rs  models.rs  pagination.rs  schedule.rs  setup.rs  time.rs
crates/tempomat/: Cargo.toml
crates/tempomat-cli/: Cargo.toml
crates/tempomat-cli/src/: api.rs  app.rs  cli.rs  config.rs  main.rs
crates/tempomat-cli/tests/: cli.rs
crates/tempomat/src/: lib.rs  schedule.rs  time.rs  tracker.rs
docs/: architecture.md  skills.md
docs/agents/: domain.md  issue-tracker.md
npm/: CHANGELOG.md  install.js  package-content.test.js  package.json  platform.js  run-companion.js  run.js
scripts/: tag-release.sh  version-sync.sh
skills/drag/: SKILL.md
skills/drag-delete/: SKILL.md
skills/drag-list/: SKILL.md
skills/drag-log/: SKILL.md
skills/drag-tempo/: SKILL.md
skills/drag-tempo/references/: account-categories.md  account-category-types.md  account-links.md  accounts.md  audit-events.md  billing-rates-table.md  budget-milestones.md  budget.md  cost.md  customers.md  expense.md  financials.md  fixed-revenue.md  flex-plans.md  generic-resource-team-members.md  generic-resources.md  global-configurations.md  global-rates.md  holiday-schemes.md  periods.md  permission-roles.md  plan-approvals.md  plans.md  portfolio.md  program.md  project-attributes.md  project-shares.md  project-time-approval.md  project.md  report.md  roles.md  scope.md  skill-assignments.md  skills.md  subscription.md  team-links.md  team-member.md  team-memberships.md  team.md  timeframe.md  (+5 more)
skills/recipe-audit-day/: SKILL.md
skills/recipe-audit-week/: SKILL.md
skills/recipe-correct-worklog/: SKILL.md
skills/recipe-log-coding-session/: SKILL.md
