[package]
name = "drag-cli"
description = "A fast Tempo.io Cloud command-line client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "drag"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
comfy-table = "7.1"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
futures-util = "0.3"
iana-time-zone = "0.1"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache", "widget-calendar"] }
ratatui-braille-bar = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = "0.10.0"
schemars.workspace = true
semver.workspace = true
tachyonfx = { version = "0.25.1", default-features = false, features = ["sendable", "std-duration"] }
drag = { version = "0.7.1", path = "../drag" }
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
time = "0.3"
url = "2.5"
webbrowser = { version = "1.2", features = ["hardened"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tokio = { version = "1", features = ["test-util"] }
rpassword = "7.4"
tempfile = "3.20"
wiremock = "0.6"

[target.'cfg(unix)'.dev-dependencies]
expectrl = "0.8"

[target.'cfg(windows)'.dependencies]
atomicwrites = "0.4"

[lints]
workspace = true
