[package]
name = "drag-companion"
description = "Safe end-of-day companion for Drag reconciliation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "drag-companion"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"

[lints]
workspace = true
