[package]
name = "tempomat-cli"
description = "A fast Tempo.io Cloud command-line client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "tempo"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
clap_complete.workspace = true
comfy-table = "7.1"
dirs = "6.0"
iana-time-zone = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rpassword = "7.4"
serde.workspace = true
serde_json.workspace = true
tempomat = { version = "0.1.0", path = "../tempomat" }
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"

[lints]
workspace = true
